<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_fragment_about">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/convide_seus_amigos"
        android:adjustViewBounds="true"

        android:scaleType="fitCenter"
        android:src="@drawable/menu_about" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat"

            android:gravity="top"
            android:text="@string/bem_vindo_ao_eventii"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"

            android:layout_marginTop="13dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/planeje_e_organize_a_festa_que_quiser_com_o_eventii"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="15sp" />



    </RelativeLayout>

    <Button
        android:id="@+id/fragment_about_btnLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_button_fragment"
        android:fontFamily="@font/montserrat"

        android:gravity="center"
        android:text="@string/entre_agora"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />



</LinearLayout>